samples/_failures_safe/1761338004_b371a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b8036de.c: In function ‘print_errors’:
./samples/SAFE/__tmp_1b8036de.c:134:9: error: expected expression at end of input
  134 |         if (strcmp(analyzer->entries[i].level, "ERROR") == 0)
      |         ^~
./samples/SAFE/__tmp_1b8036de.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b8036de.c:134:9: error: expected declaration or statement at end of input
